Saving last dot index on resume

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
 
         <Button
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:layout_weight="1"
             android:background="#FFEE00"
             android:text="Reset"
