Added new feature: creating image

--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -6,4 +6,8 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
+    <item android:id="@+id/action_save_image"
+        android:title="@string/action_save_image"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 </menu>
